@@ -33,7 +33,18 @@ using namespace System::Runtime::InteropServices;
 namespace SlimDX
 {
 namespace DXGI
-{ 
+{
+	bool Factory::AdapterEnumerator::MoveNext()
+	{
+		IDXGIAdapter* adapter = 0;
+		HRESULT hr = m_factory->InternalPointer->EnumAdapters(m_index, &adapter);
+		if (FAILED(hr))
+			return false;
+
+		m_current = Adapter::FromPointer(adapter, m_factory);
+		return true;
+	}
+
 	Factory::Factory()
 	{
 		IDXGIFactory* factory = 0;
@@ -42,6 +53,11 @@ namespace DXGI
 			throw gcnew DXGIException( Result::Last );
 
 		Construct( factory );
+	}
+
+	Factory::AdapterEnumerator Factory::EnumerateAdapters()
+	{
+		return Factory::AdapterEnumerator(this);
 	}
 
 	int Factory::GetAdapterCount()
